--- a/src/views/html/login.html
+++ b/src/views/html/login.html
@@ -49,12 +49,12 @@
             </span>
          </big>
          <br />
-         <div class="alert alert-danger">
-            <div></div>
+         <div class="alert alert-danger" v-show="hasError">
+            <div>{{ loginErrorText }}</div>
          </div>
       </form>
       <!-- forgot password form -->
-      <form v-if="fpform">
+      <form>
          <div class="input-group">
             <input
                type="email"
@@ -67,29 +67,19 @@
             </button>
          </div>
          <br />
-         <!-- show loading statue -->
-         <div class="alert alert-info">
-            <div>Please wait...</div>
-         </div>
          <!-- show errors -->
          <div class="alert alert-danger">
             <div></div>
          </div>
       </form>
-      <!-- social login -->
       <div class="text-center mt-4">
-         <button
+         <button 
             class="btn btn-danger btn-lg btn-block"
-         >
+            @click="loginWithGoogle">
             Login with Google
          </button>
       </div>
-      <div class="text-center mt-4">
-         <button
-            class="btn btn-info btn-lg btn-block"
-         >
-            Login with Twitter
-         </button>
-      </div>
    </div>
+
+   <Loading v-show="isLoading"></Loading>
 </div>
