--- a/src/views/html/chat.html
+++ b/src/views/html/chat.html
@@ -2,18 +2,11 @@
    <div class="container-fluid">
       <div class="row">
          <div class="col-md-4 sidebar">
-            <div>
-               <h2 class="text-light">SLACK</h2>
-               <hr style="border: 1px solid #333;">
-               <span>
-                  <img :src="userProfile.picture" class="rounded-circle mr-2" height="30"/>
-                  <span class="text-light">{{ userProfile.name }}</span> 
-               </span>
-               <hr style="border: 1px solid #333;">
-               <button class="btn btn-outline-light" @click="logoutHandler">登出</button>
-               <hr style="border: 1px solid #333;">
-               <hr style="border: 1px solid #333;">
-           </div>
+            <sidebar
+               :channelLists="channelLists"
+               @logout="logoutHandler"
+               @openModal="openModal"
+            ></sidebar>
          </div>
          <div class="col-md-8 content">
             
@@ -22,4 +15,41 @@
    </div>
 
    <Loading v-show="isLoading"></Loading>
+
+   <!-- modal -->
+   <div class="modal fade" id="channelModal">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+         <div class="modal-content">
+            <div class="modal-header">
+               <h5 class="modal-title text-dark">Channel name</h5>
+               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+               </button>
+            </div>
+            <div class="modal-body">
+               <form>
+                  <div class="form-group">
+                     <input 
+                        type="text" 
+                        id="new_channel"
+                        class="form-control"
+                        name="new_channel"
+                        placeholder="Channel name"
+                        autocomplete="off"
+                        v-model.trim="new_channel">
+                  </div>
+                  <ul class="list-group">
+                     <li class="list-group-item text-danger" v-show="hasAddError">
+                        {{ addError }}
+                     </li>
+                  </ul>
+               </form>
+            </div>
+            <div class="modal-footer">
+               <button class="btn btn-secondary" data-dismiss="modal">Cancle</button>
+               <button class="btn btn-primary" @click="addChannel">Add Channel</button>
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
