add message component

--- a/src/views/html/chat.html
+++ b/src/views/html/chat.html
@@ -9,14 +9,14 @@
             ></sidebar>
          </div>
          <div class="col-md-8 content">
-            
+            <Message></Message>
          </div>
       </div>
    </div>
 
    <Loading v-show="isLoading"></Loading>
 
-   <!-- modal -->
+   <!-- add channel modal -->
    <div class="modal fade" id="channelModal">
       <div class="modal-dialog modal-dialog-centered" role="document">
          <div class="modal-content">
