fix currentChannel to channelId

--- a/src/components/sidebar/html/sidebar.html
+++ b/src/components/sidebar/html/sidebar.html
@@ -13,7 +13,7 @@
       <ChannelItem
          v-for="channel in channelLists"
          :key="channel.id"
-         :channelId="channel.id"
+         :id="channel.id"
          :channelName="channel.name">
       </ChannelItem>
    </div>
