--- a/src/components/sidebar/html/sidebar.html
+++ b/src/components/sidebar/html/sidebar.html
@@ -28,7 +28,7 @@
                :userId="user.uid"
                :userName="user.name"
                :avatar="user.avatar"
-               :status="user.status"
+               :isOnline="user.isOnline"
             ></Users>
          </div>
       </div>
