--- a/src/views/html/login.html
+++ b/src/views/html/login.html
@@ -13,5 +13,5 @@
          <p class="validate-error" v-show="hasError">{{ loginErrorMsg }}</p>
       </div>
    </div>
-   <Loading v-show="true"></Loading>
+   <Loading v-show="isLoading"></Loading>
 </section>
