1.增加globalscss 2.修改channel-item和user-item的樣式

--- a/src/views/scss/login.scss
+++ b/src/views/scss/login.scss
@@ -1,6 +1,6 @@
 .loginPage {
    min-height: 100vh;
-   background-color: #002b36;
+   background-color: map-get($elBgColor, primary);
 }
 
 .chatroomTitle {
