--- a/src/components/sidebar/scss/sidebar.scss
+++ b/src/components/sidebar/scss/sidebar.scss
@@ -9,7 +9,7 @@
       >h3 {
          display: flex;
          align-items: center;
-         margin-bottom: 15px;
+         margin-bottom: 10px;
          color: #fff;
          cursor: pointer;
          user-select: none;
@@ -38,8 +38,7 @@
    display: flex;
    align-items: center;
    >.avatarImg {
-      width: 50px;
-      height: 50px;
+      @include size(50px);
       border-radius: 50%;
    }
    >.userName {
