--- a/src/components/sidebar/html/sidebar.html
+++ b/src/components/sidebar/html/sidebar.html
@@ -7,7 +7,7 @@
    </div>
    <div class="block channelBlock">
       <h3 @click="showChannel = !showChannel">
-         <span>Channel</span>
+         <span>Channels</span>
          <span class="count">({{ totalChannel }})</span>
          <i class="fa fa-caret-down" :class="{rotate:!showChannel}" aria-hidden="true"></i>
       </h3>
