--- a/src/components/sidebar/scss/sidebar.scss
+++ b/src/components/sidebar/scss/sidebar.scss
@@ -2,7 +2,7 @@
    >.block {
       padding-bottom: 15px;
       margin-bottom: 15px;
-      border-bottom: 1px solid gray;
+      border-bottom: 1px solid map-get($borderColor, divide);
       &:last-child {
          border: none;
       }
