--- a/src/components/Message/scss/message.scss
+++ b/src/components/Message/scss/message.scss
@@ -18,4 +18,15 @@
    height: calc(100vh - 60px - 64px);
    padding: 20px;
    overflow: auto;
+   &::-webkit-scrollbar {
+      width: 15px;
+   }
+   &::-webkit-scrollbar-track {
+      background-color: map-get($elBgColor, primary);
+   }
+   &::-webkit-scrollbar-thumb {
+      background-color: map-get($elBgColor, scrollbar); 
+      border: 4px solid map-get($borderColor, primary);
+      border-radius: 10px;
+   }
 }
