--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,10 @@
 @import './reset';
 
+//preload single message placeholder image
+.preloadImg {
+   background: url("~@/assets/img/placeholder.png");
+}
+
 .custom_container {
    max-width: 1200px;
    margin: 0 auto;
