--- a/src/components/Message/html/message.html
+++ b/src/components/Message/html/message.html
@@ -30,4 +30,7 @@
       :isUploading="isUploading"
       :uploadPercent="uploadPercent"
    ></ProgressLoading>
+   <Lightbox :isOpen.sync="lightBoxIsOpen">
+
+   </Lightbox>
 </div>
