--- a/src/components/Message/html/message.html
+++ b/src/components/Message/html/message.html
@@ -31,6 +31,10 @@
       :uploadPercent="uploadPercent"
    ></ProgressLoading>
    <Lightbox :isOpen.sync="lightBoxIsOpen">
-
+      <template v-slot:default>
+         <div class="photoFrame">
+            <img :src="photoUrl" alt="">
+         </div>
+      </template>
    </Lightbox>
 </div>
