--- a/src/components/Message/scss/message.scss
+++ b/src/components/Message/scss/message.scss
@@ -47,3 +47,14 @@
       font-style: italic;
    }
 }
+
+.photoFrame {
+   @extend %posCenter;
+   background-color: #fff;
+   >img {
+      display: block;
+      max-width: 400px;
+      height: auto;
+      object-fit: contain;
+   }
+}
