--- a/src/components/Lightbox/index.scss
+++ b/src/components/Lightbox/index.scss
@@ -20,8 +20,8 @@
       color: #fff;
       font-size: 50px;
       cursor: pointer;
-      &.disable {
-         opacity: 0.7;
+      &.disabled {
+         opacity: 0.5;
       }
       &.left {
          left: 50%;
