--- a/src/components/Message/scss/singleMessage.scss
+++ b/src/components/Message/scss/singleMessage.scss
@@ -19,6 +19,7 @@
       height: 50px;
       margin-right: 10px;
       border-radius: 50%;
+      cursor: pointer;
    }
    >.text {
       align-self: center;
@@ -30,7 +31,7 @@
    }
    >.imgOuter {
       >img {
-         max-width: 200px;
+         max-width: 250px;
          height: auto;
          object-fit: cover;
          border-radius: 3px;
