--- a/src/components/Message/scss/singleMessage.scss
+++ b/src/components/Message/scss/singleMessage.scss
@@ -26,8 +26,8 @@
       max-width: 250px;
       padding: 8px 15px;
       background-color: #fff;
-      border-radius: 100px;
-      word-break: break-all;
+      border-radius: 5px;
+      white-space: pre-wrap;
    }
    >.imgOuter {
       >img {
