--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,3 +15,10 @@
    color: #fff;
    font-size: 18px;
 }
+
+.msg-web-url,
+.msg-web-url:hover,
+.msg-web-url:focus {
+   color: #007bff;
+   text-decoration: underline;
+}
