--- a/src/components/Message/scss/singleMessage.scss
+++ b/src/components/Message/scss/singleMessage.scss
@@ -27,6 +27,7 @@
       padding: 8px 15px;
       background-color: #fff;
       border-radius: 5px;
+      word-break: break-all;
       white-space: pre-wrap;
    }
    >.imgOuter {
